syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "/user";

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message CreateUserResponse {
  int64 id = 1;
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  User user = 1;
}

message GetUsersRequest {}

message GetUsersResponse {
  repeated User users = 1;
}

message DeleteUserRequest {
  int64 id = 1;
}

message DeleteUserResponse {}

message UpdateUserRequest {
  User user = 1;
}

message UpdateUserResponse {
  int64 id = 1;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetAllUsers(GetUsersRequest) returns (GetUsersResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
}